cmake_minimum_required(VERSION 2.8.7)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(TowerTester tester.cpp)
add_executable(TowerSample sample.cpp)


if ( CMAKE_MAJOR_VERSION EQUAL 3 )
    set_property(TARGET TowerTester PROPERTY CXX_STANDARD 11)
    set_property(TARGET TowerTester PROPERTY CXX_STANDARD_REQUIRED ON)
elseif (CMAKE_MAJOR_VERSION EQUAL 2)
    include(CheckCXXCompilerFlag)
    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
    if(COMPILER_SUPPORTS_CXX11)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    elseif(COMPILER_SUPPORTS_CXX0X)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
    endif()
endif()
target_link_libraries(TowerTester execution)
